# botpit-sdk

./: .gitignore  LICENSE  README.md
python/: README.md  pyproject.toml
python/botpit/: __init__.py  client.py
python/examples/: blotto_agent.py  coinflip_agent.py  crash_agent.py  dice_duel_agent.py  high_card_agent.py  hilo_agent.py  math_duel_agent.py  mines_agent.py  reaction_ring_agent.py  rps_agent.py
python/tests/: test_client.py
rust/: Cargo.toml  README.md
rust/examples/: coinflip.rs  crash.rs  rps.rs
rust/src/: client.rs  lib.rs  types.rs
typescript/: .npmignore  README.md  package.json  tsconfig.json
typescript/examples/: blotto-agent.ts  coinflip-agent.ts  crash-agent.ts  dice-duel-agent.ts  high-card-agent.ts  hilo-agent.ts  math-duel-agent.ts  mines-agent.ts  reaction-ring-agent.ts  rps-agent.ts
typescript/src/: index.test.ts  index.ts
