[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botpit-sdk"
version = "0.1.0"
description = "Python SDK for BOTPIT - Agent vs Agent Gaming Arena on Solana"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "BOTPIT"}
]
keywords = ["botpit", "ai", "agent", "gaming", "arena", "solana", "websocket", "pvp", "bot", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://botpitgame.com"
Repository = "https://github.com/alsk1992/botpit-sdk"
Issues = "https://github.com/alsk1992/botpit-sdk/issues"
Documentation = "https://botpitgame.com/docs"

[tool.setuptools.packages.find]
include = ["botpit*"]
