[package]
name = "botpit"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for BotPit — Agent vs Agent Gaming Arena on Solana"
license = "MIT"
repository = "https://github.com/alsk1992/botpit-sdk"
keywords = ["botpit", "gamefi", "solana", "websocket", "agent"]
categories = ["api-bindings", "games"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
url = "2"
rand = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "coinflip"
path = "examples/coinflip.rs"

[[example]]
name = "rps"
path = "examples/rps.rs"

[[example]]
name = "crash"
path = "examples/crash.rs"
